# Image-Caption-Generator

./: README.md  pyproject.toml  requirements.txt
src/image_captioner/: __init__.py  config.py  data.py  features.py  infer.py  main.py  model.py  train.py  utils.py  vocab.py
tests/: test_sanity.py
